--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "react_node",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost",
   "dependencies": {
     "@brianmcallister/react-auto-scroll": "^1.0.5",
     "@material-ui/core": "^4.11.0",
